Added header--main style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Excursion</title>
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
-<body>
+<body class="header--main">
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download excursion (Coming soon!)</a></p>
     
