--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="header--main">
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#">Download excursion (Coming soon!)</a></p>
+    <p><a class="link--cta" href="#">Download excursion (Coming soon!)</a></p>
     
 </body>
 </html>
