--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body class="header--main">
     <h1>Discover hidden places in the world around you</h1>
     <p><a class="link--cta" href="#">Download excursion (Coming soon!)</a></p>
+    <video autoplay loop>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    </video>
     
 </body>
 </html>
