--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
     <p><img src="./resources/images/camp.jpg"></p>
     <p><img src="./resources/images/phone.png"></p>
-    
-    <h4 class="header--sub-header">Coming Soon for iPhone and Android</h4>
+
+    <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
     <p><a class="link--cta" href="#">Download excursion (Coming soon!)</a></p>
+    <p class="footer--copyright">&copy; Excursion</p>
     
 </body>
 </html>
